# mappers_warp

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: warp.rs
misc/: analyse_tifs-25-grid.py  analyse_tifs-25.py  gen_georeferenced_data.py  gen_test_data.py  georeference_output.py  lcc-india-p25-grid.tif  lcc-india-p25.tif  lcc-p25.npy  lcc-waves-cli.tif  lcc-waves.tif  ll-p25.npy  lonlat-p25.tif  lonlat-waves.tif  plot_io.py  qgis-comparison.qgz  symbolic-filters.py  tif2npy.py  warped.tif  waves_34_warped.npy
src/: burn_compute.rs  compute.rs  compute_gpu.rs  filters.rs  filters_gpu.rs  helpers.rs  lib.rs  precompute.rs  warp_params.rs
test-data/: dbg_anchors_x.npy  dbg_anchors_y.npy  ixs.npy  jys.npy  random_square_33.npy  random_square_34.npy  result.npy  waves_ref.npy
tests/: general.rs  nodata.rs  utils.rs
tests/data/: aeqd_nan.nc  aeqd_nan.npy  gfs_t2m.nc  gfs_t2m.npy  waves_34.nc  waves_34.npy  waves_nan_discard_ref.nc  waves_nan_discard_ref.npy  waves_nan_ignore_ref.nc  waves_nan_ignore_ref.npy  waves_ref.nc  waves_ref.npy
