[package]
name = "not_gdalwarp"
version = "0.0.1"
edition = "2021"
publish = false
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
description = "Very simplistic implementation of GdalWarp"
repository = "https://github.com/ScaleWeather/NotGdalWarp"
readme = "README.md"
categories = ["mathematics", "science"]
license = "Apache-2.0"
exclude = [".github/*"]

[dependencies]
ndarray = { version = "0.15", default-features = false, features = ["std"] }
thiserror = { version = "1.0" }
bincode = { version = "1.3", optional = true }
mappers = { version = "0.6" }
ndarray-npy = { version = "0.8" }

[dev-dependencies]
float-cmp = { version = "0.9" }
ndarray-npy = { version = "0.8" }

[features]
default = []
io = ["ndarray/serde", "bincode"]
