[package]
name = "notgdalwarp"
version = "0.0.4-alpha.1"
edition = "2021"
publish = false
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
description = "Very simplistic implementation of GdalWarp"
repository = "https://github.com/ScaleWeather/NotGdalWarp"
readme = "README.md"
categories = ["mathematics", "science"]
license = "Apache-2.0"
exclude = [".github/*"]

[dependencies]
ndarray = { version = "0.16", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
bincode = { version = "1.3", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true, features = [
    "derive",
] }
mappers = { version = "0.7", default-features = false }

[dev-dependencies]
float-cmp = { version = "0.9" }
ndarray-npy = { version = "0.8" }
anyhow = { version = "1.0" }
ndarray-stats = { version = "0.5" }
criterion = { version = "0.5" }

[features]
default = []
io = ["ndarray/serde", "bincode", "serde"]

[[bench]]
name = "warp"
harness = false
