[package]
name = "mappers_warp"
version = "0.0.9"
edition = "2024"
publish = true
authors = ["Jakub Lewandowski <scaleweather@gmail.com>"]
description = "Very simplistic tool for reprojecting maps, based on GdalWarp"
repository = "https://github.com/ScaleWeather/mappers_warp"
readme = "README.md"
categories = ["mathematics", "science"]
license = "Apache-2.0"
exclude = [".github/*"]

[dependencies]
ndarray = { version = "0.16", default-features = false, features = ["std"] }
thiserror = { version = "2.0", default-features = false }
bincode = { version = "2.0", default-features = false, optional = true, features = [
    "std",
    "serde",
] }
serde = { version = "1.0", default-features = false, optional = true, features = [
    "derive",
] }
mappers = { version = "0.7", default-features = false }
cubecl = { version = "0.6", features = ["cuda"] }

[dev-dependencies]
float-cmp = { version = "0.10" }
# something, something, dependecies something
netcdf = { version = "0.11", features = ["ndarray", "static"] }
anyhow = { version = "1.0" }
criterion = { version = "0.7" }

[features]
default = []
io = ["ndarray/serde", "bincode", "serde"]

[[bench]]
name = "warp"
harness = false
